restructure create_textlines, draw bounding boxes

--- a/asset_notebook.ipynb
+++ b/asset_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,7 @@
     "import os\n",
     "import fitz\n",
     "import json\n",
-    "from PIL import Image\n",
-    "import io\n",
+    "\n",
     "\n",
     "\n",
     "from text import create_text_lines\n",
@@ -38,41 +37,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First unmatched line: Tabellenverzeichnis\n",
-      "Header: Inhaltsverzeichnis, Page: I\n",
-      "Header: Tabellenverzeichnis, Page: I\n",
-      "Header: Figurenverzeichnis, Page: II\n",
-      "Header: Einleitung und Zielsetzung, Page: 1\n",
-      "Header: Geologie, Page: 3\n",
-      "Header: Beschreibung des Untersuchungsgebietes, Page: 3\n",
-      "Header: Prognose Bohrprofil, Page: 6\n",
-      "Header: Bohrarbeiten, Page: 7\n",
-      "Header: Bohrspülung, Page: 9\n",
-      "Header: Vorgesehene Untersuchungen, Page: 11\n",
-      "Header: Bohrstellen-Geologie, Page: 11\n",
-      "Header: Bohrloch-Geophysik, Page: 13\n",
-      "Header: Hydrogeologie und Hydrochemie, Page: 16\n",
-      "Header: Geotechnik und Felsmechanik, Page: 19\n",
-      "Header: Bohrplatz, Page: 23\n",
-      "Header: Projektorganisation, Page: 25\n",
-      "Header: Referenzen, Page: 27\n",
-      "TOC(entries=[{'header': 'Inhaltsverzeichnis', 'page': 'I'}, {'header': 'Tabellenverzeichnis', 'page': 'I'}, {'header': 'Figurenverzeichnis', 'page': 'II'}, {'header': 'Einleitung und Zielsetzung', 'page': '1'}, {'header': 'Geologie', 'page': '3'}, {'header': 'Beschreibung des Untersuchungsgebietes', 'page': '3'}, {'header': 'Prognose Bohrprofil', 'page': '6'}, {'header': 'Bohrarbeiten', 'page': '7'}, {'header': 'Bohrspülung', 'page': '9'}, {'header': 'Vorgesehene Untersuchungen', 'page': '11'}, {'header': 'Bohrstellen-Geologie', 'page': '11'}, {'header': 'Bohrloch-Geophysik', 'page': '13'}, {'header': 'Hydrogeologie und Hydrochemie', 'page': '16'}, {'header': 'Geotechnik und Felsmechanik', 'page': '19'}, {'header': 'Bohrplatz', 'page': '23'}, {'header': 'Projektorganisation', 'page': '25'}, {'header': 'Referenzen', 'page': '27'}])\n"
+      "Header: NAB 10-25 Cover, Page: 1\n",
+      "Header: Titelseite innen, Page: 3\n",
+      "Header: Copyright, Page: 4\n",
+      "Header: Inhaltsverzeichnis, Page: 5\n",
+      "Header: Tabellenverzeichnis, Page: 5\n",
+      "Header: Figurenverzeichnis, Page: 6\n",
+      "Header: 1 Einleitung und Zielsetzung, Page: 7\n",
+      "Header: 2 Geologie, Page: 9\n",
+      "Header: 2.1 Beschreibung des Untersuchungsgebietes, Page: 9\n",
+      "Header: 2.2 Prognose Bohrprofil, Page: 12\n",
+      "Header: 3 Bohrarbeiten, Page: 13\n",
+      "Header: 3.1 Bohrspülung, Page: 15\n",
+      "Header: 4 Vorgesehene Untersuchungen, Page: 17\n",
+      "Header: 4.1 Bohrstellen-Geologie, Page: 17\n",
+      "Header: 4.2 Bohrloch-Geophysik, Page: 19\n",
+      "Header: 4.3 Hydrogeologie und Hydrochemie, Page: 22\n",
+      "Header: 4.4 Geotechnik und Felsmechanik, Page: 25\n",
+      "Header: 5 Bohrplatz, Page: 29\n",
+      "Header: 6 Projektorganisation, Page: 31\n",
+      "Header: 7 Referenzen, Page: 33\n",
+      "TOC(entries=[{'header': 'NAB 10-25 Cover', 'page': 1}, {'header': 'Titelseite innen', 'page': 3}, {'header': 'Copyright', 'page': 4}, {'header': 'Inhaltsverzeichnis', 'page': 5}, {'header': 'Tabellenverzeichnis', 'page': 5}, {'header': 'Figurenverzeichnis', 'page': 6}, {'header': '1 Einleitung und Zielsetzung', 'page': 7}, {'header': '2 Geologie', 'page': 9}, {'header': '2.1 Beschreibung des Untersuchungsgebietes', 'page': 9}, {'header': '2.2 Prognose Bohrprofil', 'page': 12}, {'header': '3 Bohrarbeiten', 'page': 13}, {'header': '3.1 Bohrspülung', 'page': 15}, {'header': '4 Vorgesehene Untersuchungen', 'page': 17}, {'header': '4.1 Bohrstellen-Geologie', 'page': 17}, {'header': '4.2 Bohrloch-Geophysik', 'page': 19}, {'header': '4.3 Hydrogeologie und Hydrochemie', 'page': 22}, {'header': '4.4 Geotechnik und Felsmechanik', 'page': 25}, {'header': '5 Bohrplatz', 'page': 29}, {'header': '6 Projektorganisation', 'page': 31}, {'header': '7 Referenzen', 'page': 33}])\n"
      ]
     }
    ],
    "source": [
     "with fitz.open(pdf_path) as doc:\n",
     "\n",
-    "    text_lines = create_text_lines(doc) \n",
     "    language = detect_language_of_document(doc)\n",
+    "    text_lines=[]\n",
     "\n",
+    "    for page_index, page in enumerate(doc):\n",
+    "        page_number = page_index + 1\n",
+    "        text_lines.extend(create_text_lines(page, page_number))\n",
     "    extractor = TOCExtractor(matching_params)\n",
     "\n",
     "    # Extract the TOC\n",
