--- a/extract_images.ipynb
+++ b/extract_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "import pymupdf\n",
     "from PIL import Image\n",
     "import io\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "from text import create_text_lines\n",
+    "from bounding_box import cluster_drawings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Images extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/1062\n"
+      "Images extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen\n"
      ]
     }
    ],
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +114,55 @@
     "            shape.commit()\n",
     "            out_drawing= os.path.join(out_dir,f\"drawing_page_{page_number}.pdf\")\n",
     "            out_doc.save(out_drawing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Page number:1, drawings with length 7, clustered 2\n",
+      "Page number:3, drawings with length 6, clustered 1\n",
+      "Page number:14, drawings with length 44, clustered 7\n",
+      "Page number:17, drawings with length 1, clustered 1\n",
+      "Page number:23, drawings with length 171, clustered 1\n",
+      "Page number:27, drawings with length 16, clustered 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "##draw boudning box of drawing and text\n",
+    "\n",
+    "##draw bounding boxes\n",
+    "with pymupdf.open(pdf_path) as doc:\n",
+    "    for page_index,page in enumerate(doc):\n",
+    "        page_number = page_index +1\n",
+    "        \n",
+    "        lines_per_page= create_text_lines(page,page_number)\n",
+    "        drawings = page.get_drawings()\n",
+    "\n",
+    "\n",
+    "        shape = page.new_shape() \n",
+    "        for text_line in lines_per_page:\n",
+    "            shape.draw_rect(text_line.rect)\n",
+    "            shape.finish(color=(1, 0, 0), width=1)\n",
+    "        \n",
+    "\n",
+    "        if drawings:\n",
+    "            clustered_boxes = cluster_drawings(drawings)\n",
+    "            print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
+    "\n",
+    "            for cluster in clustered_boxes:\n",
+    "                shape.draw_rect(cluster)\n",
+    "                shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
+    "                \n",
+    "        shape.commit()\n",
+    "    \n",
+    "    doc.save(os.path.join(out_dir, filename))    "
    ]
   }
  ],
