--- a/page_classification.ipynb
+++ b/page_classification.ipynb
@@ -2,35 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import os\n",
     "import pymupdf\n",
-    "from text import create_text_lines, TextWord, extract_words\n",
+    "import numpy as np\n",
+    "\n",
+    "from text import  TextWord, extract_words\n",
     "from detect_language import detect_language_of_document\n",
-    "from bounding_box import expand_bbox,bbox_overlap,merge_bounding_boxes\n"
+    "from bounding_box import cluster_drawings\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_dir = os.getcwd()\n",
     "filename =\"Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
+    "#filename = \"ntb88-007.pdf\"\n",
     "\n",
-    "pdf_path = os.path.join(base_dir, \"data/NAB\", filename)"
+    "pdf_path = os.path.join(base_dir, \"data/NAB\", filename)\n",
+    "out_dir = os.path.join(base_dir, \"data/test\", os.path.splitext(filename)[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +77,7 @@
     "    text_density = len(words) / (page_size[0] * page_size[1])  # Simple density \n",
     "    avg_word_height = sum(word.rect.height for word in words) / len(words)\n",
     "\n",
-    "    density_threshold = 0.00005  # Lower means more likely to be an image-heavy page\n",
+    "    density_threshold = 0.0001  # Lower means more likely to be an image-heavy page\n",
     "    height_threshold = 20  # If words are very large, the page may contain figures\n",
     "\n",
     "    if text_density > density_threshold and avg_word_height < height_threshold:\n",
@@ -74,11 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "\n",
     "def classify_textpos(words: list[TextWord]):\n",
     "    \"\"\"Classifies text structure on page based on distribution.\"\"\"\n",
@@ -101,13 +113,7 @@
     "    median_x_spacing = np.median(x_spacing) if len(x_spacing) > 0 else 0\n",
     "    width_std = np.std(widths)\n",
     "    height_std = np.std(heights)\n",
-    "\n",
-    "    # Criteria for classification\n",
-    "    is_structured = median_y_spacing < 15  # Small row spacing → structured layout\n",
-    "    is_narrow  = np.median(widths) < 100  # Small width suggests tabular data\n",
-    "    is_uniform_width = width_std < 10  # Consistent column width → table-like\n",
-    "    \n",
-    "    is_uniform_height = height_std < 10 \n",
+    "     \n",
     "    print(f\"median_y_spacing: {median_y_spacing }\")\n",
     "    print(f\"median width :{np.median(widths) }\")\n",
     "    print(f\"width_std: {width_std }\")\n",
@@ -118,297 +124,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cluster_drawings(drawings):\n",
-    "    \"\"\"\n",
-    "    Cluster overlapping drawings into groups\n",
-    "    \"\"\"\n",
-    "    clusters = []\n",
-    "    expanded_bboxes = [expand_bbox(pymupdf.Rect(d[\"rect\"]), 5) for d in drawings]    \n",
-    "    for bbox in expanded_bboxes:\n",
-    "        added = False\n",
-    "        \n",
-    "        for cluster in clusters:\n",
-    "            if any(bbox_overlap(bbox, pymupdf.Rect(existing_bbox)) for existing_bbox in cluster):\n",
-    "                cluster.append(bbox)\n",
-    "                added = True\n",
-    "                break\n",
-    "        \n",
-    "        if not added:\n",
-    "            clusters.append([bbox])  # new cluster\n",
-    "    \n",
-    "    # Merge bounding boxes inside each cluster\n",
-    "    merged_clusters = [merge_bounding_boxes(cluster) for cluster in clusters]\n",
-    "    \n",
-    "    return merged_clusters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "page number: 1\n",
-      "median_y_spacing: 0.0\n",
-      "median width :40.39642333984375\n",
-      "width_std: 61.94029531954457\n",
-      "median_x_spacing :4.016693115234375\n",
-      "height_std:12.810119532907168\n",
-      "\n",
-      "page number: 2\n",
-      "Unknown\n",
-      "page number: 3\n",
-      "median_y_spacing: 0.0\n",
-      "median width :42.86698913574219\n",
-      "width_std: 53.28196824648505\n",
-      "median_x_spacing :3.397308349609375\n",
-      "height_std:11.10991055147811\n",
-      "\n",
-      "page number: 4\n",
-      "median_y_spacing: 0.0\n",
-      "median width :27.64801025390625\n",
-      "width_std: 19.88149430955991\n",
-      "median_x_spacing :2.860107421875\n",
-      "height_std:6.4672553941189925e-06\n",
-      "\n",
-      "page number: 5\n",
-      "median_y_spacing: 0.0\n",
-      "median width :23.231475830078125\n",
-      "width_std: 127.35898487953577\n",
-      "median_x_spacing :0.0113983154296875\n",
-      "height_std:0.7397917521457982\n",
-      "\n",
-      "page number: 6\n",
-      "median_y_spacing: 0.0\n",
-      "median width :25.04754638671875\n",
-      "width_std: 63.67378070228419\n",
-      "median_x_spacing :1.24456787109375\n",
-      "height_std:0.4579388337095658\n",
-      "\n",
-      "page number: 7\n",
-      "median_y_spacing: 0.0\n",
-      "median width :25.045379638671875\n",
-      "width_std: 20.105428833467094\n",
-      "median_x_spacing :0.8567047119140625\n",
-      "height_std:0.5121266544034767\n",
-      "\n",
-      "page number: 8\n",
-      "median_y_spacing: 0.0\n",
-      "median width :21.965484619140625\n",
-      "width_std: 23.96769318671943\n",
-      "median_x_spacing :19.648727416992188\n",
-      "height_std:9.175218447128956e-06\n",
-      "\n",
-      "page number: 9\n",
-      "median_y_spacing: 0.0\n",
-      "median width :25.06292724609375\n",
-      "width_std: 26.766233403945062\n",
-      "median_x_spacing :4.644020080566406\n",
-      "height_std:0.8752192098395837\n",
-      "\n",
-      "page number: 10\n",
-      "median_y_spacing: 0.0\n",
-      "median width :25.064590454101562\n",
-      "width_std: 14.642595017137712\n",
-      "median_x_spacing :21.026702880859375\n",
-      "height_std:7.929605667906743e-06\n",
-      "\n",
-      "page number: 11\n",
-      "median_y_spacing: 0.0\n",
-      "median width :24.484909057617188\n",
-      "width_std: 21.641569749535915\n",
-      "median_x_spacing :16.56201171875\n",
-      "height_std:0.615132106952986\n",
-      "\n",
-      "page number: 12\n",
-      "median_y_spacing: 0.0\n",
-      "median width :25.625152587890625\n",
-      "width_std: 17.39656004105437\n",
-      "median_x_spacing :5.573486328125\n",
-      "height_std:0.44049454480303996\n",
-      "\n",
-      "page number: 13\n",
-      "median_y_spacing: 0.0\n",
-      "median width :21.38629150390625\n",
-      "width_std: 20.85052032451693\n",
-      "median_x_spacing :0.777313232421875\n",
-      "height_std:0.45015647653662605\n",
-      "\n",
-      "page number: 14\n",
-      "median_y_spacing: 0.0\n",
-      "median width :20.473289489746094\n",
-      "width_std: 19.450888287474132\n",
-      "median_x_spacing :1.30706787109375\n",
-      "height_std:0.5846796127094582\n",
-      "\n",
-      "page number: 15\n",
-      "median_y_spacing: 0.0\n",
-      "median width :24.991573333740234\n",
-      "width_std: 22.208484038104984\n",
-      "median_x_spacing :0.776275634765625\n",
-      "height_std:0.1911091997015185\n",
-      "\n",
-      "page number: 16\n",
-      "median_y_spacing: 0.0\n",
-      "median width :21.3846435546875\n",
-      "width_std: 26.087499139241032\n",
-      "median_x_spacing :1.061309814453125\n",
-      "height_std:0.26611333645649227\n",
-      "\n",
-      "page number: 17\n",
-      "median_y_spacing: 0.0\n",
-      "median width :26.881256103515625\n",
-      "width_std: 25.152704637973738\n",
-      "median_x_spacing :0.9914016723632812\n",
-      "height_std:0.5494505172245827\n",
-      "\n",
-      "page number: 18\n",
-      "median_y_spacing: 0.0\n",
-      "median width :29.953445434570312\n",
-      "width_std: 23.467589331939607\n",
-      "median_x_spacing :0.654449462890625\n",
-      "height_std:0.30876517632569367\n",
-      "\n",
-      "page number: 19\n",
-      "median_y_spacing: 0.0\n",
-      "median width :26.297119140625\n",
-      "width_std: 22.785329651154786\n",
-      "median_x_spacing :0.8759231567382812\n",
-      "height_std:0.3315758640941003\n",
-      "\n",
-      "page number: 20\n",
-      "median_y_spacing: 0.0\n",
-      "median width :19.527923583984375\n",
-      "width_std: 20.014137143825284\n",
-      "median_x_spacing :0.316192626953125\n",
-      "height_std:0.410527230780861\n",
-      "\n",
-      "page number: 21\n",
-      "median_y_spacing: 0.0\n",
-      "median width :21.219383239746094\n",
-      "width_std: 20.35567326690681\n",
-      "median_x_spacing :0.2306365966796875\n",
-      "height_std:0.5219787332726759\n",
-      "\n",
-      "page number: 22\n",
-      "median_y_spacing: 0.0\n",
-      "median width :25.05633544921875\n",
-      "width_std: 26.573390442371288\n",
-      "median_x_spacing :5.674530029296875\n",
-      "height_std:0.5039054084270287\n",
-      "\n",
-      "page number: 23\n",
-      "median_y_spacing: 0.0\n",
-      "median width :20.06402587890625\n",
-      "width_std: 18.465367165285297\n",
-      "median_x_spacing :0.1529083251953125\n",
-      "height_std:0.4464774724786862\n",
-      "\n",
-      "page number: 24\n",
-      "median_y_spacing: 0.0\n",
-      "median width :30.5518798828125\n",
-      "width_std: 23.746030186334806\n",
-      "median_x_spacing :0.886199951171875\n",
-      "height_std:0.5220936368207165\n",
-      "\n",
-      "page number: 25\n",
-      "median_y_spacing: 0.0\n",
-      "median width :25.625091552734375\n",
-      "width_std: 21.46014578401721\n",
-      "median_x_spacing :1.0458602905273438\n",
-      "height_std:0.3029225656006069\n",
-      "\n",
-      "page number: 26\n",
-      "median_y_spacing: 0.0\n",
-      "median width :30.50244140625\n",
-      "width_std: 22.47215305014835\n",
-      "median_x_spacing :3.3258209228515625\n",
-      "height_std:0.00011864152744679009\n",
-      "\n",
-      "page number: 27\n",
-      "median_y_spacing: 0.0\n",
-      "median width :9.76779556274414\n",
-      "width_std: 27.791650432970656\n",
-      "median_x_spacing :0.003997802734375\n",
-      "height_std:0.5299699387891084\n",
-      "\n",
-      "page number: 28\n",
-      "Unknown\n",
-      "page number: 29\n",
-      "median_y_spacing: 0.0\n",
-      "median width :22.155441284179688\n",
-      "width_std: 18.237540441404448\n",
-      "median_x_spacing :12.35247802734375\n",
-      "height_std:1.1094089957499431\n",
-      "\n",
-      "page number: 30\n",
-      "Unknown\n",
-      "page number: 31\n",
-      "median_y_spacing: 0.0\n",
-      "median width :22.905380249023438\n",
-      "width_std: 27.07896587915935\n",
-      "median_x_spacing :4.07684326171875\n",
-      "height_std:0.8330675596620872\n",
-      "\n",
-      "page number: 32\n",
-      "median_y_spacing: 0.0\n",
-      "median width :24.426116943359375\n",
-      "width_std: 28.82997088323272\n",
-      "median_x_spacing :21.65911865234375\n",
-      "height_std:9.344061823971473e-06\n",
-      "\n",
-      "page number: 33\n",
-      "median_y_spacing: 0.0\n",
-      "median width :25.378067016601562\n",
-      "width_std: 21.800251035963292\n",
-      "median_x_spacing :0.8069915771484375\n",
-      "height_std:0.36817057197174685\n",
-      "\n",
-      "page number: 34\n",
-      "median_y_spacing: 0.0\n",
-      "median width :29.632278442382812\n",
-      "width_std: 22.089861848040336\n",
-      "median_x_spacing :0.830169677734375\n",
-      "height_std:1.2647481510058448e-05\n",
-      "\n"
+      "image\n",
+      "No Words on Page\n",
+      "image\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "image\n",
+      "text\n",
+      "image\n",
+      "image\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "text\n",
+      "image\n",
+      "No Words on Page\n",
+      "image\n",
+      "No Words on Page\n",
+      "text\n",
+      "image\n",
+      "text\n",
+      "text\n"
      ]
     }
    ],
    "source": [
+    "#classify page based on text\n",
     "with pymupdf.open(pdf_path) as doc:\n",
-    "    \n",
     "    for page_index,page in enumerate(doc):\n",
     "        page_number = page_index +1\n",
-    "\n",
-    "        drawings = page.get_drawings()\n",
-    "\n",
-    "        # if not drawings:\n",
-    "        #     continue\n",
-    "        # \n",
-    "        # clustered_boxes = cluster_drawings(drawings)\n",
-    "        # print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
-    "        # \n",
-    "        # for cluster in clustered_boxes: #filter out small bboxes\n",
-    "        #     if cluster.get_area() > 100000:\n",
-    "        #         print(\"valid drawing size\")\n",
-    "        print(f\"page number: {page_number}\")\n",
-    "        words = extract_words(page, page_number)\n",
-    "        classify_textpos(words,)\n",
-    "      \n",
+    "        page_size = (page.rect.width, page.rect.height)\n",
     "        \n",
-    "        "
+    "        words = extract_words(page, page_number)\n",
+    "        print(classify_by_text_density(words,page_size))\n",
+    "        #print(classify_textpos(words))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +193,6 @@
     "    drawings = page.get_drawings()\n",
     "    if drawings:\n",
     "        clustered_boxes = cluster_drawings(drawings)\n",
-    "        print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
     "\n",
     "        for cluster in clustered_boxes: #filter out small bboxes\n",
     "            if cluster.get_area() > 100000:\n",
@@ -429,127 +202,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Page number:1, drawings with length 7, clustered 2\n",
       "Page 1: drawing\n",
-      "Digitally born: True\n",
-      "\n",
-      "Page 2: blank page\n",
-      "Digitally born: False\n",
-      "\n",
-      "Page number:3, drawings with length 6, clustered 1\n",
+      "Page 2: No Words on Page\n",
       "Page 3: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 4: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 5: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 6: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 7: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 8: image\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 9: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 10: image\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 11: image\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 12: image\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 13: text\n",
-      "Digitally born: True\n",
-      "\n",
-      "Page number:14, drawings with length 44, clustered 7\n",
       "Page 14: drawing\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 15: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 16: text\n",
-      "Digitally born: True\n",
-      "\n",
-      "Page number:17, drawings with length 1, clustered 1\n",
       "Page 17: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 18: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 19: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 20: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 21: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 22: image\n",
-      "Digitally born: True\n",
-      "\n",
-      "Page number:23, drawings with length 171, clustered 1\n",
       "Page 23: drawing\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 24: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 25: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 26: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 27: image\n",
-      "Digitally born: True\n",
-      "\n",
-      "Page 28: blank page\n",
-      "Digitally born: False\n",
-      "\n",
+      "Page 28: No Words on Page\n",
       "Page 29: image\n",
-      "Digitally born: True\n",
-      "\n",
-      "Page 30: blank page\n",
-      "Digitally born: False\n",
-      "\n",
+      "Page 30: No Words on Page\n",
       "Page 31: text\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 32: image\n",
-      "Digitally born: True\n",
-      "\n",
       "Page 33: text\n",
-      "Digitally born: True\n",
-      "\n",
-      "Page 34: text\n",
-      "Digitally born: True\n",
-      "\n"
+      "Page 34: text\n"
      ]
     }
    ],
    "source": [
+    "##classify pdf based on image, drawing and text\n",
     "with pymupdf.open(pdf_path) as doc:\n",
     "\n",
-    "    text_lines = create_text_lines(doc) \n",
     "    language = detect_language_of_document(doc)\n",
     "\n",
     "    for page_index, page in enumerate(doc):\n",
@@ -566,8 +266,8 @@
     "            page_type = classify_by_text_density(words, page_size)\n",
     "        \n",
     "        print(f\"Page {page_number}: {page_type}\")\n",
-    "        print(f\"Digitally born: {digitally_born}\")\n",
-    "        print()\n"
+    "        #print(f\"Digitally born: {digitally_born}\")\n",
+    "        #print()\n"
    ]
   }
  ],
