--- a/extract_images.ipynb
+++ b/extract_images.ipynb
@@ -11,7 +11,8 @@
     "from PIL import Image\n",
     "import io\n",
     "\n",
-    "from text import create_text_lines\n",
+    "\n",
+    "from text import  create_text_lines, create_text_blocks\n",
     "from bounding_box import cluster_drawings"
    ]
   },
@@ -23,9 +24,8 @@
    "source": [
     "base_dir = os.getcwd()\n",
     "filename =\"Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
-    "# filename = \"Berichte_NAB 12-051_Sedimentologie und Stratigraphie des ‘Brauner Doggers’ und seiner westlichen.PDF\"\n",
-    "# filename = \"Berichte_NAB 12-040_Untere Rahmengesteine des Opalinustons  Hydrogeologische Einheiten, Gesteinsparam.PDF\"\n",
-    "pdf_path = os.path.join(base_dir, \"data/NAB\", filename)"
+    "filename = \"1062_6.pdf\"\n",
+    "pdf_path = os.path.join(base_dir, \"data/input/text\", filename)"
    ]
   },
   {
@@ -47,17 +47,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Images extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen\n"
+      "Images and drawings extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/1062_6\n"
      ]
     }
    ],
    "source": [
-    "##extract images from document\n",
+    "##extract images and drawings from document\n",
     "\n",
     "with pymupdf.Document(pdf_path) as doc:\n",
-    "    for page_number,page in enumerate(doc):\n",
-    "        image_list = page.get_images()\n",
-    "        drawing_list = page.get_drawings()\n",
+    "    for page_index,page in enumerate(doc):\n",
+    "        page_number = page_index + 1\n",
+    "        #extract images\n",
+    "        image_list = page.get_images()        \n",
     "        for image_idx, img in enumerate(image_list):\n",
     "            xref = img[0] \n",
     "        # extract image bytes \n",
@@ -70,27 +71,13 @@
     "            # Save the image to disk\n",
     "            image_path = os.path.join(out_dir,f\"image_{page_number}_{image_idx}.{image_ext}\")\n",
     "            pil_image.save(image_path)\n",
-    "            \n",
-    "print(f\"Images extracted to: {out_dir}\")\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##extract drawings from document\n",
-    "\n",
-    "with pymupdf.open(pdf_path) as doc:\n",
-    "    for page_index,page in enumerate(doc):\n",
-    "        page_number = page_index +1\n",
+    "        #extract drawings\n",
     "        drawings = page.get_drawings()\n",
+    "        rotation = page.rotation\n",
     "        if drawings:\n",
     "            out_doc = pymupdf.open()\n",
-    "            outpage = out_doc.new_page(width=page.rect.width, height=page.rect.height)\n",
+    "            outpage = out_doc.new_page(width=page.mediabox_size.x, height=page.mediabox_size.y)\n",
     "            shape = outpage.new_shape() \n",
     "            for draw_idx,drawing in enumerate(drawings):\n",
     "        \n",
@@ -112,56 +99,60 @@
     "                    dashes=drawing.get(\"dashes\", None),  # Line dashing\n",
     "                )\n",
     "            shape.commit()\n",
+    "            outpage.set_rotation(rotation)\n",
     "            out_drawing= os.path.join(out_dir,f\"drawing_page_{page_number}.pdf\")\n",
-    "            out_doc.save(out_drawing)"
+    "            out_doc.save(out_drawing)\n",
+    "print(f\"Images and drawings extracted to: {out_dir}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Page number:1, drawings with length 7, clustered 2\n",
-      "Page number:3, drawings with length 6, clustered 1\n",
-      "Page number:14, drawings with length 44, clustered 7\n",
-      "Page number:17, drawings with length 1, clustered 1\n",
-      "Page number:23, drawings with length 171, clustered 1\n",
-      "Page number:27, drawings with length 16, clustered 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "##draw boudning box of drawing and text\n",
     "\n",
-    "##draw bounding boxes\n",
+    "##draw bounding boxes of text and drawings and texblocks\n",
     "with pymupdf.open(pdf_path) as doc:\n",
     "    for page_index,page in enumerate(doc):\n",
     "        page_number = page_index +1\n",
-    "        \n",
+    "        matrix = page.derotation_matrix\n",
+    "\n",
     "        lines_per_page= create_text_lines(page,page_number)\n",
-    "        drawings = page.get_drawings()\n",
+    "        reading_blocks = create_text_blocks(lines_per_page)\n",
+    "        shape = page.new_shape()\n",
     "\n",
-    "\n",
-    "        shape = page.new_shape() \n",
+    "        for block in reading_blocks:\n",
+    "            padded_block = pymupdf.Rect(block.rect.x0 - 3, block.rect.y0 - 3, block.rect.x1 + 3, block.rect.y1 + 3)\n",
+    "            if page.rotation != 0:\n",
+    "                oriented_block = padded_block*matrix\n",
+    "                shape.draw_rect(oriented_block)\n",
+    "            else:\n",
+    "                shape.draw_rect(padded_block)\n",
+    "        \n",
+    "        shape.finish(color=(0, 0, 1), width=1)\n",
+    "        \n",
     "        for text_line in lines_per_page:\n",
-    "            shape.draw_rect(text_line.rect)\n",
-    "            shape.finish(color=(1, 0, 0), width=1)\n",
+    "            if page.rotation!= 0:\n",
+    "                oriented_bbox = text_line.rect*matrix\n",
+    "                shape.draw_rect(oriented_bbox)\n",
+    "            else:\n",
+    "                shape.draw_rect(text_line.rect)\n",
+    "        shape.finish(color=(1, 0, 0), width=1)\n",
     "        \n",
     "\n",
+    "        drawings = page.get_drawings()\n",
     "        if drawings:\n",
     "            clustered_boxes = cluster_drawings(drawings)\n",
     "            print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
     "\n",
     "            for cluster in clustered_boxes:\n",
     "                shape.draw_rect(cluster)\n",
-    "                shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
-    "                \n",
+    "            shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
     "        shape.commit()\n",
-    "    \n",
+    "\n",
     "    doc.save(os.path.join(out_dir, filename))    "
    ]
   }
