include keyowrd matching

--- a/extract_images.ipynb
+++ b/extract_images.ipynb
@@ -13,7 +13,8 @@
     "\n",
     "\n",
     "from text import  create_text_lines, create_text_blocks\n",
-    "from bounding_box import cluster_drawings"
+    "from bounding_box import cluster_drawings\n",
+    "from bounding_box import expand_bbox"
    ]
   },
   {
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -102,14 +103,12 @@
     "            outpage.set_rotation(rotation)\n",
     "            out_drawing= os.path.join(out_dir,f\"drawing_page_{page_number}.pdf\")\n",
     "            out_doc.save(out_drawing)\n",
-    "print(f\"Images and drawings extracted to: {out_dir}\")\n",
-    "\n",
-    "\n"
+    "print(f\"Images and drawings extracted to: {out_dir}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +124,7 @@
     "        shape = page.new_shape()\n",
     "\n",
     "        for block in reading_blocks:\n",
-    "            padded_block = pymupdf.Rect(block.rect.x0 - 3, block.rect.y0 - 3, block.rect.x1 + 3, block.rect.y1 + 3)\n",
+    "            padded_block = expand_bbox(block.rect,3)\n",
     "            if page.rotation != 0:\n",
     "                oriented_block = padded_block*matrix\n",
     "                shape.draw_rect(oriented_block)\n",
