--- a/classify_scanned_page.ipynb
+++ b/classify_scanned_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -22,14 +22,16 @@
     "import pymupdf\n",
     "import numpy as np\n",
     "import math\n",
+    "import regex\n",
     "\n",
     "from text import extract_words, create_text_lines, create_text_blocks\n",
-    "from utils import classify_wordpos, classify_text_density\n"
+    "from utils import classify_wordpos, classify_text_density, TextWord\n",
+    "from keyword_finding import find_keywords_in_lines\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +42,12 @@
     "pdf_path = os.path.join(base_dir, \"data/input\", input_folder)\n",
     "out_dir = os.path.join(base_dir, \"data/test\", os.path.splitext(filename)[0])\n",
     "\n",
-    "# pdf_path = \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich\""
+    "# pdf_path = \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keywords_boreprofile = [\"bohrung\",\"bohrprofil\"]\n",
+    "\n",
+    "\n",
+    "def find_maps_pattern(words:list[TextWord]):\n",
+    "    pattern_maps = r\"1\\s*:\\s*[1,2,5,][0,5]*\"\n",
+    "    for word in words:\n",
+    "        pattern = regex.compile(pattern_maps)\n",
+    "        match = pattern.search(word.text)\n",
+    "        if match:\n",
+    "            return match\n",
+    "            \n",
+    "def classify_on_keywords(lines, words):\n",
+    "    keywords_on_page = find_keywords_in_lines(lines, keywords_boreprofile)\n",
+    "    if keywords_on_page:\n",
+    "        return \"boreprofile\"\n",
+    "    if find_maps_pattern(words):\n",
+    "        return \"map\"\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,56 +145,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5\n",
-      "\n",
-      "2.0\n",
-      "\n",
-      "3.2244897959183674\n",
-      "\n",
-      "2.5\n",
-      "\n",
-      "map\n",
-      "2.3333333333333335\n",
-      "\n",
-      "2.875\n",
-      "\n",
-      "3.9\n",
-      "\n",
-      "6.0\n",
-      "\n",
-      "2.5714285714285716\n",
-      "\n",
-      "3.0\n",
-      "\n",
-      "3.0\n",
-      "\n",
-      "2.25\n",
-      "\n",
-      "3.3947368421052633\n",
-      "\n",
-      "3.25\n",
-      "\n",
-      "2.6666666666666665\n",
-      "\n",
-      "4.9523809523809526\n",
-      "\n",
-      "3.4057971014492754\n",
-      "\n",
-      "2.3333333333333335\n",
-      "\n",
-      "2.3333333333333335\n",
-      "\n",
-      "2.5\n",
-      "\n",
-      "3.0\n",
-      "\n",
-      "2.2\n",
-      "\n"
+      "text: (0, 0.0)\n",
+      "boreprofile: (3, 0.1304)\n",
+      "map: (20, 0.8696)\n",
+      "unknown: (0, 0.0)\n",
+      "total 23\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
+    "text_count=0\n",
+    "boreprofile_count=0\n",
+    "map_count=0\n",
+    "unknown_count= 0\n",
+    "\n",
     "for filename in os.listdir(pdf_path):\n",
     "    # if count >=1:\n",
     "    #     break\n",
@@ -174,18 +167,19 @@
     "        file_path = os.path.join(pdf_path, filename)\n",
     "        \n",
     "        with pymupdf.Document(file_path) as doc: \n",
-    "        \n",
     "            for page_index,page in enumerate(doc):\n",
-    "                \n",
+    "                count += 1\n",
+    "\n",
     "                #page info\n",
     "                page_number = page_index +1\n",
     "                page_size = (page.rect.width, page.rect.height)\n",
     "\n",
-    "                #words attributes\n",
     "                words = extract_words(page, page_number)\n",
     "                if not words:\n",
-    "                    print(\"no words on page\")\n",
+    "                    unknown_count += 1\n",
     "                    continue\n",
+    "\n",
+    "                #words attributes\n",
     "                word_attributes = classify_text_density(words,page_size)\n",
     "                words_position = classify_wordpos(words)\n",
     "                distances = closest_word_distances(words)\n",
@@ -203,38 +197,49 @@
     "                    for line in block.lines \n",
     "                    for word in line.words if len(line.words) > 1])\n",
     "                \n",
+    "\n",
+    "                classified = False\n",
+    "                # classify based on word density within textblock and words per lines\n",
     "                if word_area/block_area > 1 and np.mean(words_per_line) >  3:\n",
-    "                    print(\"text\")\n",
+    "                    text_count += 1  \n",
+    "                    classified = True\n",
     " \n",
     "                else:\n",
-    "                    ## cluster lines based on y0 ( could also do text_blocks...)\n",
-    "                    clusters = y0_word_cluster(lines)\n",
+    "                    #classify by keywords\n",
+    "                    classify_keywords = classify_on_keywords(lines, words)\n",
+    "                    if classify_keywords == \"boreprofile\":\n",
+    "                        boreprofile_count += 1\n",
+    "                        classified = True\n",
+    "                    # elif classify_keywords == \"map\":\n",
+    "                    #     map_count += 1\n",
+    "                    #     classified = True\n",
     "\n",
-    "                    ## filter out clusters with only one line\n",
-    "                    filtered_clusters = [cluster for cluster in clusters if len(cluster) >=2]\n",
-    "                    if filtered_clusters:\n",
-    "                        \n",
-    "                        ##check if we have long cluster with multiple entries -> boreprofile\n",
-    "                        print(sum(len(cluster) for cluster in filtered_clusters)/len(filtered_clusters))\n",
-    "                        print()\n",
-    "                    # print(len(lines))\n",
-    "                    else:\n",
-    "                        print(\"map\")\n",
+    "                    #classify based on y0 alignment\n",
+    "                    if not classified:\n",
+    "                        ##  could also do text_blocks...\n",
+    "                        clusters = y0_word_cluster(lines)\n",
+    "                        ## filter out clusters with only one line\n",
+    "                        filtered_clusters = [cluster for cluster in clusters if len(cluster) >=2]\n",
+    "                        if filtered_clusters:           \n",
     "\n",
-    "                    #print(\"image\")\n",
-    "                \n",
-    "                # if np.mean(words_per_line) <=  3:\n",
-    "                #     print(f\"file: {filename}: map\") \n",
-    "                # else:\n",
-    "                #     print(f\"file: {filename}: text\") \n",
+    "                            ### boreprofile smaller eucledian distance + longer clusters\n",
+    "                            if median_distance < 20 and max((len(cluster) for cluster in filtered_clusters)) > 4:\n",
+    "                                boreprofile_count +=1\n",
+    "                            else:\n",
+    "                                map_count+=1\n",
+    "                        else:\n",
+    "                            map_count +=1\n",
     "\n",
-    "                #print(round(median_distance,2), np.mean(words_per_line)) ## maps higher euclidean distance between words than borehole or text\n",
-    "                count +=1\n"
+    "print(f\"text: {text_count,round(text_count/count,4)}\")\n",
+    "print(f\"boreprofile: {boreprofile_count,round(boreprofile_count/count,4)}\")\n",
+    "print(f\"map: {map_count,round(map_count/count,4)}\")\n",
+    "print(f\"unknown: {unknown_count, round(unknown_count/count,4)}\")\n",
+    "print(f\"total {count}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
