readme to be continued

--- a/classify_scanned_page.ipynb
+++ b/classify_scanned_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -32,23 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_dir = os.getcwd()\n",
-    "input_folder = \"maps\"\n",
+    "input_folder = \"boreprofile\"\n",
     "filename =\"8627_3.pdf\"\n",
     "\n",
     "pdf_path = os.path.join(base_dir, \"data/input\", input_folder)\n",
     "out_dir = os.path.join(base_dir, \"data/test\", os.path.splitext(filename)[0])\n",
     "\n",
-    "# pdf_path = \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich/\""
+    "pdf_path = \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,20 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keywords_boreprofile = [\"bohrung\",\"bohrprofil\"]\n",
+    "keywords_boreprofile = [\"bohrung\",\"bohrprofil, sondage\"]\n",
     "\n",
     "\n",
     "def find_maps_pattern(words:list[TextWord]):\n",
-    "    pattern_maps = r\"1\\s*:\\s*[1,2,5,][0,5]*\"\n",
-    "    for word in words:\n",
-    "        pattern = regex.compile(pattern_maps)\n",
-    "        match = pattern.search(word.text)\n",
-    "        if match:\n",
-    "            return match\n",
+    "    pattern_maps = [r\"1\\s*:\\s*[125](25|5)?000+\", r\"1\\s*:\\s*[125]((0{1,2})?([',]000)+)\"]\n",
+    "    for pattern in pattern_maps:\n",
+    "        for word in words:\n",
+    "            compiled_pattern = regex.compile(pattern)\n",
+    "            match = compiled_pattern.search(word.text)\n",
+    "            if match:\n",
+    "                print(match)\n",
+    "                return match\n",
     "            \n",
     "def classify_on_keywords(lines, words):\n",
     "    keywords_on_page = find_keywords_in_lines(lines, keywords_boreprofile)\n",
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,18 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text: (0, 0.0)\n",
-      "boreprofile: (3, 0.1304)\n",
-      "map: (20, 0.8696)\n",
+      "text: (7, 0.0417)\n",
+      "boreprofile: (140, 0.8333)\n",
+      "map: (21, 0.125)\n",
       "unknown: (0, 0.0)\n",
-      "total 23\n"
+      "total 168\n"
      ]
     }
    ],
@@ -209,9 +211,9 @@
     "                    if classify_keywords == \"boreprofile\":\n",
     "                        boreprofile_count += 1\n",
     "                        classified = True\n",
-    "                    # elif classify_keywords == \"map\":\n",
-    "                    #     map_count += 1\n",
-    "                    #     classified = True\n",
+    "                    elif classify_keywords == \"map\": ## including this makes classification for zurich worse...\n",
+    "                        map_count += 1\n",
+    "                        classified = True\n",
     "\n",
     "                    #classify based on y0 alignment\n",
     "                    if not classified:\n",
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
