--- a/extract_images.ipynb
+++ b/extract_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,19 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_dir = os.getcwd()\n",
     "filename =\"Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
-    "filename = \"1062_6.pdf\"\n",
-    "pdf_path = os.path.join(base_dir, \"data/input/text\", filename)"
+    "filename = \"266126001-bp.pdf\"\n",
+    "pdf_path = os.path.join(base_dir, \"data/input/maps\", filename)\n",
+    "pdf_path =  \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich/266126001-bp.pdf\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Images and drawings extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/1062_6\n"
+      "Images and drawings extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/266126001-bp\n"
      ]
     }
    ],
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,15 +124,15 @@
     "        reading_blocks = create_text_blocks(lines_per_page)\n",
     "        shape = page.new_shape()\n",
     "\n",
-    "        for block in reading_blocks:\n",
-    "            padded_block = expand_bbox(block.rect,3)\n",
-    "            if page.rotation != 0:\n",
-    "                oriented_block = padded_block*matrix\n",
-    "                shape.draw_rect(oriented_block)\n",
-    "            else:\n",
-    "                shape.draw_rect(padded_block)\n",
+    "        # for block in reading_blocks:\n",
+    "        #     padded_block = expand_bbox(block.rect,3)\n",
+    "        #     if page.rotation != 0:\n",
+    "        #         oriented_block = padded_block*matrix\n",
+    "        #         shape.draw_rect(oriented_block)\n",
+    "        #     else:\n",
+    "        #         shape.draw_rect(padded_block)\n",
     "        \n",
-    "        shape.finish(color=(0, 0, 1), width=1)\n",
+    "        # shape.finish(color=(0, 0, 1), width=1)\n",
     "        \n",
     "        for text_line in lines_per_page:\n",
     "            if page.rotation!= 0:\n",
@@ -142,17 +143,17 @@
     "        shape.finish(color=(1, 0, 0), width=1)\n",
     "        \n",
     "\n",
-    "        drawings = page.get_drawings()\n",
-    "        if drawings:\n",
-    "            clustered_boxes = cluster_drawings(drawings)\n",
-    "            print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
+    "        # drawings = page.get_drawings()\n",
+    "        # if drawings:\n",
+    "        #     clustered_boxes = cluster_drawings(drawings)\n",
+    "        #     print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
     "\n",
-    "            for cluster in clustered_boxes:\n",
-    "                shape.draw_rect(cluster)\n",
-    "            shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
+    "        #     for cluster in clustered_boxes:\n",
+    "        #         shape.draw_rect(cluster)\n",
+    "        #     shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
     "        shape.commit()\n",
     "\n",
-    "    doc.save(os.path.join(out_dir, filename))    "
+    "    doc.save(os.path.join(out_dir, f\"{filename}_2\"))    "
    ]
   }
  ],
