--- a/notebooks/asset-notebook_S3.ipynb
+++ b/notebooks/asset-notebook_S3.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Notebook to retrieve and save all text for all files on the S3 bucket as .txt files'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -57,24 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/11774 [00:00<?, ?it/s, asset/asset_files_new_ocr/10000.pdf]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 11774/11774 [2:07:07<00:00,  1.54it/s, asset/asset_files_new_ocr/44069.pdf]     \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tqdm(total=len(objs)) as pbar:\n",
     "\n",
