--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,13 +17,16 @@
     "import os\n",
     "import pymupdf\n",
     "from PIL import Image\n",
+    "import sys\n",
+    "\n",
+    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "sys.path.append(os.path.join(repo_root, \"src\"))\n",
     "\n",
     "\n",
-    "base_dir = os.getcwd()\n",
     "filename = \"43283.pdf\"\n",
     "\n",
-    "pdf_path = os.path.join(base_dir, \"data/input\", filename)\n",
-    "out_dir = os.path.join(base_dir, \"data/input/boreprofile\")\n",
+    "pdf_path = os.path.join(repo_root, \"data/input\", filename)\n",
+    "out_dir = os.path.join(repo_root, \"data/input/boreprofile\")\n",
     "\n",
     "wanted_page = 41\n",
     "\n",
@@ -47,9 +50,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (venv)",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
