--- a/notebooks/extract_images.ipynb
+++ b/notebooks/extract_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,10 @@
     "import pymupdf\n",
     "from PIL import Image\n",
     "import io\n",
+    "import sys\n",
+    "\n",
+    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "sys.path.append(os.path.join(repo_root, \"src\"))\n",
     "\n",
     "\n",
     "from text import  create_text_lines, create_text_blocks\n",
@@ -23,26 +27,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = os.getcwd()\n",
     "filename =\"Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
     "filename = \"266126001-bp.pdf\"\n",
-    "pdf_path = os.path.join(base_dir, \"data/input/maps\", filename)\n",
-    "pdf_path =  \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich/266126001-bp.pdf\"\n"
+    "pdf_path = os.path.join(repo_root, \"data/input/maps\", filename)\n",
+    "pdf_path =  \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich/266126001-bp.pdf\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir = os.path.join(base_dir, \"data/test\", os.path.splitext(filename)[0])\n",
+    "out_dir = os.path.join(repo_root, \"data/test\", os.path.splitext(filename)[0])\n",
     "os.makedirs(out_dir, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Page number:1, drawings with length 136, clustered 2\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "##draw bounding boxes of text and drawings and texblocks\n",
@@ -124,15 +135,15 @@
     "        reading_blocks = create_text_blocks(lines_per_page)\n",
     "        shape = page.new_shape()\n",
     "\n",
-    "        # for block in reading_blocks:\n",
-    "        #     padded_block = expand_bbox(block.rect,3)\n",
-    "        #     if page.rotation != 0:\n",
-    "        #         oriented_block = padded_block*matrix\n",
-    "        #         shape.draw_rect(oriented_block)\n",
-    "        #     else:\n",
-    "        #         shape.draw_rect(padded_block)\n",
+    "        for block in reading_blocks:\n",
+    "            padded_block = expand_bbox(block.rect,3)\n",
+    "            if page.rotation != 0:\n",
+    "                oriented_block = padded_block*matrix\n",
+    "                shape.draw_rect(oriented_block)\n",
+    "            else:\n",
+    "                shape.draw_rect(padded_block)\n",
     "        \n",
-    "        # shape.finish(color=(0, 0, 1), width=1)\n",
+    "        shape.finish(color=(0, 0, 1), width=1)\n",
     "        \n",
     "        for text_line in lines_per_page:\n",
     "            if page.rotation!= 0:\n",
@@ -143,14 +154,14 @@
     "        shape.finish(color=(1, 0, 0), width=1)\n",
     "        \n",
     "\n",
-    "        # drawings = page.get_drawings()\n",
-    "        # if drawings:\n",
-    "        #     clustered_boxes = cluster_drawings(drawings)\n",
-    "        #     print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
+    "        drawings = page.get_drawings()\n",
+    "        if drawings:\n",
+    "            clustered_boxes = cluster_drawings(drawings)\n",
+    "            print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
     "\n",
-    "        #     for cluster in clustered_boxes:\n",
-    "        #         shape.draw_rect(cluster)\n",
-    "        #     shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
+    "            for cluster in clustered_boxes:\n",
+    "                shape.draw_rect(cluster)\n",
+    "            shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
     "        shape.commit()\n",
     "\n",
     "    doc.save(os.path.join(out_dir, f\"{filename}_2\"))    "
@@ -159,9 +170,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (venv)",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
