--- a/notebooks/pdf_type.ipynb
+++ b/notebooks/pdf_type.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fitz \n",
     "import os\n",
-    "base_dir = os.getcwd()"
+    "import sys\n",
+    "\n",
+    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "sys.path.append(os.path.join(repo_root, \"src\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_path_dig = \"data/NAB/Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
-    "pdf_path_ocr = \"data/test/1062.pdf\"\n",
-    "pdf_path_none = \"/home/lillemor/Documents/ocr/input/3EK5LEG800_bp_19940601_Arsch93-18.pdf\""
+    "pdf_path_dig = os.path.join(repo_root,\"data/NAB/Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\")\n",
+    "pdf_path_ocr = os.path.join(repo_root,\"data/test/1062.pdf\")\n",
+    "pdf_path_none = os.path.join(repo_root,\"/home/lillemor/Documents/ocr/input/3EK5LEG800_bp_19940601_Arsch93-18.pdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +74,14 @@
      "output_type": "stream",
      "text": [
       "Image area proportion: 0.9999999267952941\n",
-      "Text area proportion: 0.0\n",
-      "Scanned\n",
+      "Text area proportion: 0.2038311191887031\n",
+      "Searchable text\n",
       "Image area proportion: 1.0000000234693325\n",
-      "Text area proportion: 0.0\n",
-      "Scanned\n",
+      "Text area proportion: 0.2539696352873088\n",
+      "Searchable text\n",
       "Image area proportion: 1.0000000724951985\n",
-      "Text area proportion: 0.07059904612487967\n",
-      "Scanned\n"
+      "Text area proportion: 0.053957504261791175\n",
+      "Searchable text\n"
      ]
     }
    ],
@@ -93,9 +96,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (venv)",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
