--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14,6 +14,28 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "This notebook is used to create input pages for `classify_scanned_page.ipynb` from original reports.\n",
+    "\n",
+    "Instructions:\n",
+    "\n",
+    "Place the original reports (PDFs) in `data/input/`  \n",
+    "   - The folder should contain PDF files from which pages will be extracted.\n",
+    "\n",
+    "Specify the following parameters:  \n",
+    "   - filename: Name of the PDF file to extract pages from.  \n",
+    "   - wanted_page`: The page number to extract.  \n",
+    "   - out_dir`: The target directory where the extracted page will be stored.\n",
+    "\n",
+    "Set out_dir to one of the following categories:  \n",
+    "   - \"boreprofile\"  \n",
+    "   - \"maps\" \n",
+    "   - \"text\" \n",
+    "   - \"title_page\"  \n",
+    "\n",
+    "The extracted pages are used as **training data** for classification.\n",
+    "\"\"\"\n",
+    "\n",
     "import os\n",
     "import pymupdf\n",
     "from PIL import Image\n",
